# witin

./: CMakeLists.txt
cmake/: witinConfig.cmake.in
cmake/modules/: Findlibdb_cxx.cmake  libdb_cxx.cmake  libdb_cxxConfig.cmake
include/witin/: global.h
include/witin/graph/: graph.h
include/witin/node/: baseNode.h  node.h
include/witin/op/: active.h  const.h  conv.h  math.h  mv.h  nn.h  pooling.h
include/witin/session/: session.h
include/witin/sim/: lib.h
include/witin/tensor/: tensor.h
include/witin/utils/: debug.h
src/: branch.cpp  graph.cpp  main.cpp  node.cpp  tensor.cpp
src/boardConfig/: mulboardConfig.json  mulreluboardConfig.json
src/graph/: graph.cpp
src/node/: node.cpp
src/session/: session.cpp
src/sim/: lib.cpp
src/simConfig/: simConfig.json
src/tensor/: tensor.cpp
src/utils/: debug.cpp
tests/: CMakeLists.txt
tests/main/: CMakeLists.txt  main.cpp
